--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script th:src="@{/webjars/stomp-websocket/2.3.3-1/stomp.js}" type="text/javascript"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/libs/jquery.cookie.js"
+            th:src="@{/js/libs/jquery.cookie.js}"></script>
+
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="/css/questions.css" rel="stylesheet" media="screen">
@@ -83,10 +92,35 @@
                     </div>
                     <div class="btn_link_custom mt-2">больше связанных меток</div>
                 </div>
+
+
+            </div>
+            <div class="container">
+
+                <div id="chat-page">
+                    <div class="chat-container">
+                        <div class="chat-header">
+                            <h3 id="chatTitle">Group Chat</h3>
+                        </div>
+                        <ul id="messageArea">
+
+                        </ul>
+                        <form id="messageForm" name="messageForm " nameForm="messageForm ">
+                            <div class="form-group">
+                                <div class="input-group clearfix">
+                                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
+                                           class="form-control"/>
+                                    <button type="submit" class="primary">Send</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<script type="text/javascript" src="/js/groupChat.js"></script>
 <script type="text/javascript" src="/js/initScriptAuthorized.js"></script>
 <script type="text/javascript" src="/js/getPagination.js"></script>
 <script type="text/javascript" src="/js/questions.js"></script>
