Фильтрация для api-пагинации (только QuestionViewDto)

--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -44,6 +44,23 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Period menu -->//
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">неделя</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">месяц</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">год</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">все</a>
+                </li>
+            </ul>
+
             <!--Questions-->
             <div id="pagination_objects" class="col mt-2 p-0"></div>
             <div id="navigation" class="col mt-2"></div>
@@ -120,6 +137,10 @@
         </div>
     </div>
 </div>
+
+
+
+
 <script type="text/javascript" src="/js/groupChat.js"></script>
 <script type="text/javascript" src="/js/initScriptAuthorized.js"></script>
 <script type="text/javascript" src="/js/getPagination.js"></script>
