--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -25,8 +25,8 @@
         <!-- Category menu -->
         <div class="form-group">
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary active">
-                    <input type="radio" name="options" id="reputation" checked> Популярные
+                <label class="btn btn-secondary">
+                    <input type="radio" name="options" id="reputation"> Популярные
                 </label>
                 <label class="btn btn-secondary">
                     <input type="radio" name="options" id="new_users"> Наименование
